--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,12 @@ services:
       # if you want to be able to edit widowx_envs code without rebuilding the image, this
       # overwrites the widowx_envs directory that was copied in at build time
       - ./experiments:/home/robonet/experiments
-      - /media/harddrive/:/home/robonet/trainingdata  # TODO (YL): better way to mount a local directory
+      - /scr/jenseng/widowx_data:/home/robonet/trainingdata  # TODO (YL): better way to mount a local directory
       # $HOME/widowx_data:/home/robonet/trainingdata
       - ./widowx_envs:/home/robonet/widowx_envs
       - /dev:/dev  # for host tty access
+    devices:
+      - /dev/video0:/dev/video0
 
   bridge_data_v2:
     image: robonet-bridge-data-v2
@@ -39,4 +41,6 @@ services:
       - ./widowx_envs:/home/robonet/widowx_envs 
       - ./code/bridge_data_v2:/home/robonet/code/bridge_data_v2
       - ./experiments:/home/robonet/experiments
-      - /mount/harddrive/:/home/robonet/trainingdata
+      - /scr/jenseng/widowx_data:/home/robonet/trainingdata 
+    devices:
+      - /dev/video0:/dev/video0
