--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,12 @@ services:
       # if you want to be able to edit widowx_envs code without rebuilding the image, this
       # overwrites the widowx_envs directory that was copied in at build time
       - ./experiments:/home/robonet/experiments
-      - /scr/jenseng/widowx_data:/home/robonet/trainingdata  # TODO (YL): better way to mount a local directory
+      - /home/iliad/widowx_data:/home/robonet/trainingdata  # TODO (YL): better way to mount a local directory
       # $HOME/widowx_data:/home/robonet/trainingdata
       - ./widowx_envs:/home/robonet/widowx_envs
       - /dev:/dev  # for host tty access
     devices:
-      - /dev/video0:/dev/video0
+      - /dev/video6:/dev/video6
 
   bridge_data_v2:
     image: robonet-bridge-data-v2
@@ -41,6 +41,24 @@ services:
       - ./widowx_envs:/home/robonet/widowx_envs 
       - ./code/bridge_data_v2:/home/robonet/code/bridge_data_v2
       - ./experiments:/home/robonet/experiments
-      - /scr/jenseng/widowx_data:/home/robonet/trainingdata 
+      - /home/iliad/widowx_data:/home/robonet/trainingdata 
     devices:
-      - /dev/video0:/dev/video0
+      - /dev/video6:/dev/video6
+      
+  octo:
+    image: robonet-octo
+    container_name: robonet_${USER}_octo
+    user: robonet:1002
+    build:
+      context: code/octo
+    network_mode: host
+    environment:
+      - WANDB_API_KEY=putwandbkeyhere
+    runtime: nvidia
+    volumes:
+      - ./widowx_envs:/home/robonet/widowx_envs 
+      - ./code/octo:/home/robonet/code/octo
+      - ./experiments:/home/robonet/experiments
+      - /home/iliad/widowx_data:/home/robonet/trainingdata 
+    devices:
+      - /dev/video6:/dev/video6
